<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/first_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextFirstName"
        android:layout_below="@+id/editTextFirstName"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/last_name"
        android:importantForAutofill="no" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/radioGroupGender"
        android:gravity="center"
        android:layout_toEndOf="@+id/editTextFirstName"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/editTextLastName">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonMale"
            android:text="@string/male"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/radioButtonFemale"/>
    </RadioGroup>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/spinnerNationality"
        android:prompt="@string/nationality_prompt"
        android:layout_alignEnd="@+id/editTextLastName"
        android:layout_alignBottom="@+id/editTextLastName"
        android:layout_below="@+id/editTextFirstName"
        android:layout_toEndOf="@+id/editTextLastName">
    </Spinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAdd"
        android:text="@string/add"
        android:layout_below="@+id/editTextLastName"/>

</RelativeLayout>